--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<p>Hello </p>
-<p>This is my personal website </p>
+<p>Hello, I'm Zhixuan Li</p>
+<p>This is my personal website</p>
 <p>Welcome!</p>
-
-<ul>
-</ul>
-3.查看网站的网址
