--- a/index.html
+++ b/index.html
@@ -1,3 +1,552 @@
-<p>Hello, I'm Zhixuan Li</p>
-<p>This is my personal website</p>
-<p>Welcome!</p>
+<!doctype html>
+<html lang="zh-CN">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>我的个人网站</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <style>
+        /* 全局样式与背景 */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: "Segoe UI", "Microsoft YaHei", sans-serif;
+        }
+
+        body {
+            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+            color: #333;
+            min-height: 100vh;
+            padding: 20px;
+            line-height: 1.6;
+        }
+
+        /* 主容器 */
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        /* 头部样式 */
+        header {
+            text-align: center;
+            margin-bottom: 40px;
+            color: white;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .profile {
+            margin-bottom: 20px;
+        }
+
+        .avatar {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            border: 4px solid white;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+            margin-bottom: 15px;
+            background-color: #f8f9fa;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 50px;
+            color: #6a11cb;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        h1 {
+            font-size: 2.8rem;
+            margin-bottom: 10px;
+            background: linear-gradient(to right, #ffd89b, #19547b);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+        }
+
+        .tagline {
+            font-size: 1.2rem;
+            opacity: 0.9;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        /* 选项卡容器 */
+        .tabs-container {
+            background-color: rgba(255, 255, 255, 0.95);
+            border-radius: 20px;
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
+            overflow: hidden;
+            margin-bottom: 30px;
+        }
+
+        /* 选项卡标题 */
+        .tabs-header {
+            display: flex;
+            background: linear-gradient(to right, #4a00e0, #8e2de2);
+            flex-wrap: wrap;
+        }
+
+        .tab-btn {
+            flex: 1;
+            min-width: 120px;
+            padding: 20px 15px;
+            background: none;
+            border: none;
+            color: white;
+            font-size: 1.1rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .tab-btn:hover {
+            background-color: rgba(255, 255, 255, 0.15);
+        }
+
+        .tab-btn.active {
+            background-color: rgba(255, 255, 255, 0.25);
+        }
+
+        .tab-btn.active::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 10%;
+            width: 80%;
+            height: 4px;
+            background-color: #ffd166;
+            border-radius: 2px;
+        }
+
+        .tab-btn i {
+            margin-right: 10px;
+            font-size: 1.2rem;
+        }
+
+        /* 选项卡内容 */
+        .tab-content {
+            padding: 40px;
+            display: none;
+            animation: fadeIn 0.5s ease;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .tab-content.active {
+            display: block;
+        }
+
+        .tab-content h2 {
+            color: #4a00e0;
+            margin-bottom: 20px;
+            font-size: 2rem;
+            border-bottom: 2px solid #f0f0f0;
+            padding-bottom: 10px;
+        }
+
+        .tab-content p {
+            margin-bottom: 20px;
+            font-size: 1.1rem;
+            color: #444;
+        }
+
+        /* 项目网格 */
+        .projects-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 25px;
+            margin-top: 25px;
+        }
+
+        .project-card {
+            background-color: white;
+            border-radius: 12px;
+            padding: 25px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+            transition:
+                transform 0.3s ease,
+                box-shadow 0.3s ease;
+            border-left: 5px solid #4a00e0;
+        }
+
+        .project-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+        }
+
+        .project-card h3 {
+            color: #333;
+            margin-bottom: 10px;
+            font-size: 1.4rem;
+        }
+
+        /* 技能列表 */
+        .skills-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 15px;
+            margin-top: 20px;
+        }
+
+        .skill-item {
+            background: linear-gradient(to right, #4a00e0, #8e2de2);
+            color: white;
+            padding: 10px 20px;
+            border-radius: 50px;
+            font-weight: 600;
+            box-shadow: 0 4px 10px rgba(74, 0, 224, 0.2);
+        }
+
+        /* 联系信息 */
+        .contact-info {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 30px;
+            margin-top: 25px;
+        }
+
+        .contact-item {
+            display: flex;
+            align-items: center;
+            font-size: 1.1rem;
+        }
+
+        .contact-item i {
+            background-color: #4a00e0;
+            color: white;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-right: 15px;
+            font-size: 1.3rem;
+        }
+
+        /* 页脚 */
+        footer {
+            text-align: center;
+            color: white;
+            padding: 20px;
+            margin-top: 30px;
+            opacity: 0.9;
+            font-size: 1rem;
+        }
+
+        .social-links {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .social-icon {
+            width: 45px;
+            height: 45px;
+            background-color: rgba(255, 255, 255, 0.1);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 1.3rem;
+            transition: all 0.3s ease;
+        }
+
+        .social-icon:hover {
+            background-color: white;
+            color: #4a00e0;
+            transform: translateY(-5px);
+        }
+
+        /* 响应式设计 */
+        @media (max-width: 768px) {
+            .tabs-header {
+                flex-direction: column;
+            }
+
+            .tab-btn {
+                min-width: 100%;
+                padding: 15px;
+            }
+
+            .tab-content {
+                padding: 25px;
+            }
+
+            h1 {
+                font-size: 2.2rem;
+            }
+
+            .projects-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .contact-info {
+                flex-direction: column;
+                gap: 20px;
+            }
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <header>
+            <div class="profile">
+                <div class="avatar">
+                    <i class="fas fa-user"></i>
+                </div>
+                <h1>我的个人空间</h1>
+                <p class="tagline">开发者 | 设计师 | 技术爱好者</p>
+            </div>
+        </header>
+
+        <main>
+            <div class="tabs-container">
+                <div class="tabs-header">
+                    <button class="tab-btn active" data-tab="about">
+                        <i class="fas fa-user"></i>关于我
+                    </button>
+                    <button class="tab-btn" data-tab="projects">
+                        <i class="fas fa-code"></i>我的项目
+                    </button>
+                    <button class="tab-btn" data-tab="skills">
+                        <i class="fas fa-tools"></i>技能专长
+                    </button>
+                    <button class="tab-btn" data-tab="contact">
+                        <i class="fas fa-envelope"></i>联系我
+                    </button>
+                </div>
+
+                <div class="tab-content active" id="about">
+                    <h2>关于我</h2>
+                    <p>
+                        你好！我是一名充满热情的开发者，专注于创建优雅、高效的解决方案。我热爱学习新技术，并将其应用到实际项目中。
+                    </p>
+                    <p>
+                        我相信好的设计不仅是外观漂亮，更要提供出色的用户体验。在编程之外，我喜欢摄影、徒步旅行和阅读科技类书籍。
+                    </p>
+                    <p>
+                        我目前专注于全栈开发，使用现代技术如React、Node.js和Python构建Web应用程序。我享受从概念到部署的整个开发过程。
+                    </p>
+
+                    <div class="projects-grid">
+                        <div class="project-card">
+                            <h3>教育背景</h3>
+                            <p>
+                                计算机科学学士学位，主修软件工程。在校期间多次参与开源项目，并荣获创新设计奖。
+                            </p>
+                        </div>
+                        <div class="project-card">
+                            <h3>工作经验</h3>
+                            <p>
+                                3年全栈开发经验，曾参与多个企业级应用开发，擅长敏捷开发与团队协作。
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="tab-content" id="projects">
+                    <h2>我的项目</h2>
+                    <p>以下是我近期参与或独立开发的一些项目：</p>
+
+                    <div class="projects-grid">
+                        <div class="project-card">
+                            <h3>智能任务管理应用</h3>
+                            <p>
+                                一个基于React和Node.js的任务管理工具，具有AI智能分类和优先级排序功能。
+                            </p>
+                            <p>
+                                <strong>技术栈：</strong> React, Node.js, MongoDB,
+                                TensorFlow.js
+                            </p>
+                        </div>
+                        <div class="project-card">
+                            <h3>电商数据分析平台</h3>
+                            <p>
+                                为中小型电商企业提供的数据可视化分析平台，支持实时销售数据监控。
+                            </p>
+                            <p>
+                                <strong>技术栈：</strong> Python, Django, D3.js, PostgreSQL
+                            </p>
+                        </div>
+                        <div class="project-card">
+                            <h3>个人理财助手</h3>
+                            <p>
+                                移动端应用，帮助用户追踪消费习惯、制定预算并生成财务报告。
+                            </p>
+                            <p><strong>技术栈：</strong> Flutter, Firebase, Express.js</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="tab-content" id="skills">
+                    <h2>技能与专长</h2>
+                    <p>以下是我在开发过程中掌握的技术和工具：</p>
+
+                    <h3>编程语言</h3>
+                    <div class="skills-list">
+                        <div class="skill-item">JavaScript</div>
+                        <div class="skill-item">Python</div>
+                        <div class="skill-item">HTML/CSS</div>
+                        <div class="skill-item">Java</div>
+                        <div class="skill-item">TypeScript</div>
+                    </div>
+
+                    <h3>框架与库</h3>
+                    <div class="skills-list">
+                        <div class="skill-item">React</div>
+                        <div class="skill-item">Node.js</div>
+                        <div class="skill-item">Vue.js</div>
+                        <div class="skill-item">Express</div>
+                        <div class="skill-item">Django</div>
+                    </div>
+
+                    <h3>工具与技术</h3>
+                    <div class="skills-list">
+                        <div class="skill-item">Git</div>
+                        <div class="skill-item">Docker</div>
+                        <div class="skill-item">AWS</div>
+                        <div class="skill-item">MongoDB</div>
+                        <div class="skill-item">Figma</div>
+                    </div>
+                </div>
+
+                <div class="tab-content" id="contact">
+                    <h2>联系我</h2>
+                    <p>
+                        如果您对我的工作感兴趣，希望合作或有任何问题，欢迎通过以下方式联系我：
+                    </p>
+
+                    <div class="contact-info">
+                        <div class="contact-item">
+                            <i class="fas fa-envelope"></i>
+                            <div>
+                                <h3>电子邮件</h3>
+                                <p>hello@example.com</p>
+                            </div>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-phone"></i>
+                            <div>
+                                <h3>电话</h3>
+                                <p>+86 138 0000 0000</p>
+                            </div>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div>
+                                <h3>地址</h3>
+                                <p>中国，北京</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <p>我通常会在24小时内回复邮件。如果您有紧急事项，请直接致电。</p>
+                </div>
+            </div>
+        </main>
+
+        <footer>
+            <p>© 2023 我的个人网站. 保留所有权利.</p>
+            <div class="social-links">
+                <a href="#" class="social-icon">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="#" class="social-icon">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="#" class="social-icon">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#" class="social-icon">
+                    <i class="fab fa-weibo"></i>
+                </a>
+            </div>
+        </footer>
+    </div>
+
+    <script>
+        // 选项卡切换功能
+        document.addEventListener("DOMContentLoaded", function () {
+            const tabBtns = document.querySelectorAll(".tab-btn");
+            const tabContents = document.querySelectorAll(".tab-content");
+
+            // 为每个选项卡按钮添加点击事件
+            tabBtns.forEach((btn) => {
+                btn.addEventListener("click", function () {
+                    // 获取目标选项卡ID
+                    const tabId = this.getAttribute("data-tab");
+
+                    // 移除所有按钮的活动状态
+                    tabBtns.forEach((b) => b.classList.remove("active"));
+                    // 隐藏所有内容
+                    tabContents.forEach((content) =>
+                        content.classList.remove("active"),
+                    );
+
+                    // 激活当前按钮
+                    this.classList.add("active");
+                    // 显示对应内容
+                    document.getElementById(tabId).classList.add("active");
+                });
+            });
+
+            // 添加一些交互效果
+            const projectCards = document.querySelectorAll(".project-card");
+            projectCards.forEach((card) => {
+                card.addEventListener("mouseenter", function () {
+                    this.style.transform = "translateY(-8px)";
+                });
+
+                card.addEventListener("mouseleave", function () {
+                    this.style.transform = "translateY(0)";
+                });
+            });
+
+            // 社交图标悬停效果
+            const socialIcons = document.querySelectorAll(".social-icon");
+            socialIcons.forEach((icon) => {
+                icon.addEventListener("mouseenter", function () {
+                    this.style.transform = "translateY(-5px) scale(1.1)";
+                });
+
+                icon.addEventListener("mouseleave", function () {
+                    this.style.transform = "translateY(0) scale(1)";
+                });
+            });
+
+            // 控制台欢迎信息
+            console.log(
+                "%c👋 欢迎访问我的个人网站！",
+                "color: #6a11cb; font-size: 16px; font-weight: bold;",
+            );
+            console.log(
+                "%c💻 这个网站使用纯HTML/CSS/JS构建，代码已开源。",
+                "color: #2575fc; font-size: 14px;",
+            );
+        });
+    </script>
+</body>
+
+</html>
