--- a/index.html
+++ b/index.html
@@ -6,694 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Astronomy Researcher</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/blog.css">
-  <style>
-    /* Global Styles */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    body {
-      background:
-        linear-gradient(rgba(10, 15, 40, 0.75), rgba(5, 10, 30, 0.8)),
-        url("./images/stars.png") no-repeat center center fixed;
-      background-size: cover;
-      color: #e0e7ff;
-      min-height: 100vh;
-      padding: 20px;
-      line-height: 1.6;
-    }
-
-    /* Home选项卡布局样式 */
-    .home-content {
-      display: flex;
-      align-items: flex-start;
-      justify-content: space-between;
-      gap: 40px;
-      margin-top: 30px;
-    }
-
-    .home-text {
-      flex: 1;
-      text-align: left;
-    }
-
-    .home-photo {
-      flex: 0 0 300px;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-    }
-
-    .profile-photo {
-      width: 100%;
-      max-width: 300px;
-      height: auto;
-      border-radius: 15px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-      border: 3px solid rgba(100, 150, 255, 0.2);
-    }
-
-    /* 响应式设计：在小屏幕上堆叠排列 */
-    @media (max-width: 768px) {
-      .home-content {
-        flex-direction: column;
-        align-items: center;
-        gap: 30px;
-      }
-
-      .home-text {
-        order: 2;
-        /* 文字在下 */
-        text-align: center;
-      }
-
-      .home-photo {
-        order: 1;
-        /* 照片在上 */
-        flex: 0 0 auto;
-      }
-
-      .profile-photo {
-        max-width: 250px;
-      }
-    }
-
-    .container {
-      max-width: 65%;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    /* Header Styles */
-    header {
-      text-align: center;
-      margin-bottom: 40px;
-      color: white;
-    }
-
-    .avatar {
-      width: 140px;
-      height: 140px;
-      border-radius: 50%;
-      border: 4px solid rgba(255, 255, 255, 0.3);
-      box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-      margin: 0 auto 15px;
-      background: linear-gradient(135deg, #1a237e, #311b92);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 60px;
-      color: #bbdefb;
-    }
-
-    h1 {
-      font-size: 2.8rem;
-      margin-bottom: 10px;
-      background: linear-gradient(to right, #bbdefb, #64b5f6);
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-    }
-
-    .tagline {
-      font-size: 1.3rem;
-      opacity: 0.9;
-      max-width: 700px;
-      margin: 0 auto;
-    }
-
-    /* Tabs Container */
-    .tabs-container {
-      background-color: rgba(15, 20, 50, 0.85);
-      border-radius: 15px;
-      box-shadow: 0 15px 35px rgba(0, 0, 0, 0.4);
-      overflow: hidden;
-      margin-bottom: 30px;
-      border: 1px solid rgba(100, 150, 255, 0.1);
-    }
-
-    /* Tabs Header */
-    .tabs-header {
-      display: flex;
-      background: linear-gradient(to right, #1a237e, #283593);
-      flex-wrap: wrap;
-    }
-
-    .tab-btn {
-      flex: 1;
-      min-width: 160px;
-      padding: 20px 15px;
-      background: none;
-      border: none;
-      color: #bbdefb;
-      font-size: 1.1rem;
-      font-weight: 600;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      text-align: center;
-    }
-
-    .tab-btn:hover {
-      background-color: rgba(100, 150, 255, 0.15);
-    }
-
-    .tab-btn.active {
-      background-color: rgba(100, 150, 255, 0.25);
-      color: white;
-    }
-
-    .tab-btn i {
-      margin-right: 10px;
-    }
-
-    /* Tab Content */
-    .tab-content {
-      padding: 45px;
-      display: none;
-    }
-
-    .tab-content.active {
-      display: block;
-    }
-
-    .tab-content h2 {
-      color: #64b5f6;
-      margin-bottom: 20px;
-      font-size: 2.2rem;
-      text-align: center;
-    }
-
-    .tab-content p {
-      margin-bottom: 20px;
-      font-size: 1.15rem;
-      color: #e0e7ff;
-      text-align: center;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    /* Personal Information Cards - CENTERED */
-    .info-grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      /* 卡片居中 */
-      gap: 30px;
-      /* 卡片之间的间距 */
-      margin: 40px auto 0;
-      /* 上下边距，左右自动居中 */
-      width: 80%;
-      /* 容器宽度为父元素的80% */
-      /* max-width: 1200px;*/
-      /* 最大宽度限制 */
-    }
-
-    /* 修改.info-card样式 */
-    .info-card {
-      background-color: rgba(25, 30, 70, 0.6);
-      border-radius: 12px;
-      padding: 30px;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-      transition: transform 0.3s ease;
-      border-left: 5px solid #64b5f6;
-      width: calc(50% - 15px);
-      /* 每个卡片占容器一半宽度减去一半的间距 */
-      box-sizing: border-box;
-      /* 确保padding和border包含在宽度内 */
-      min-width: 300px;
-      /* 卡片最小宽度，确保在小屏幕上仍可读 */
-    }
-
-    /* 卡片悬停效果 */
-    .info-card:hover {
-      transform: translateY(-5px);
-    }
-
-    /* 卡片标题样式 */
-    .info-card h3 {
-      color: #bbdefb;
-      margin-bottom: 15px;
-      font-size: 1.5rem;
-      text-align: center;
-    }
-
-    /* 卡片内容样式 */
-    .info-card p {
-      color: #e0e7ff;
-      line-height: 1.6;
-      text-align: left;
-      margin-bottom: 10px;
-    }
-
-    /* 响应式设计：在小屏幕上每行只显示一个卡片 */
-    @media (max-width: 768px) {
-      .info-grid {
-        width: 90%;
-        /* 在小屏幕上稍微宽一些 */
-      }
-
-      .info-card {
-        width: 100%;
-        /* 在小屏幕上卡片占满整行 */
-        min-width: auto;
-        /* 移除最小宽度限制 */
-      }
-    }
-
-    /* 可选：如果有奇数个卡片，最后一个卡片居中 */
-    .info-card:last-child:nth-child(odd) {
-      /* 当最后一个卡片是奇数（即单数行只有一个卡片时），使其居中 */
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    /* Projects Grid - CENTERED */
-    /* 修改projects-grid为垂直布局 */
-    .projects-grid {
-      display: flex;
-      flex-direction: column;
-      /* 垂直排列 */
-      gap: 35px;
-      /* 卡片之间的垂直间距 */
-      margin: 40px auto 0;
-      width: 90%;
-      /* 稍微宽一些，因为只有一列 */
-      max-width: 1000px;
-      /* 限制最大宽度 */
-    }
-
-    /* 修改project-card样式为水平布局，包含文字和图片 */
-    .project-card {
-      background-color: rgba(25, 30, 70, 0.6);
-      border-radius: 12px;
-      padding: 30px;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      border-left: 5px solid #1a237e;
-      display: flex;
-      align-items: flex-start;
-      /* 顶部对齐 */
-      justify-content: space-between;
-      width: 100%;
-      /* 占满容器宽度 */
-      box-sizing: border-box;
-      min-height: 200px;
-      /* 设置最小高度 */
-    }
-
-    /* 卡片悬停效果 */
-    .project-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
-    }
-
-    /* 文字内容区域 - 左对齐 */
-    .project-text {
-      flex: 1;
-      /* 占据剩余空间 */
-      text-align: left;
-      padding-right: 30px;
-      /* 与图片保持间距 */
-    }
-
-    /* 卡片标题样式 - 左对齐 */
-    .project-card h3 {
-      color: #bbdefb;
-      margin-bottom: 15px;
-      font-size: 1.6rem;
-      text-align: left;
-    }
-
-    /* 卡片内容样式 - 左对齐 */
-    .project-card p {
-      color: #e0e7ff;
-      line-height: 1.7;
-      text-align: left;
-      margin-bottom: 15px;
-    }
-
-    /* 图片区域 */
-    .project-image {
-      flex: 0 0 40%;
-      /* 固定宽度，不伸缩 */
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      max-height: 300px;
-    }
-
-    /* 图片样式 - 圆角 */
-    .project-img {
-      width: 100%;
-      /*max-width: 250px;*/
-      height: auto;
-      border-radius: 12px;
-      /* 圆角 */
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-      object-fit: cover;
-      /* 确保图片比例正常，裁剪多余部分 */
-      transition: transform 0.3s ease;
-    }
-
-    /* 图片悬停效果 */
-    .project-img:hover {
-      transform: scale(1.03);
-    }
-
-    /* 标签样式（可选，用于技术栈标签） */
-    .project-tags {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-top: 20px;
-    }
-
-    .project-tag {
-      background-color: rgba(100, 150, 255, 0.2);
-      color: #bbdefb;
-      padding: 6px 12px;
-      border-radius: 20px;
-      font-size: 0.9rem;
-      font-weight: 500;
-    }
-
-    /* 响应式设计：在小屏幕上将图片移到文字下方 */
-    @media (max-width: 768px) {
-      .projects-grid {
-        width: 95%;
-        gap: 25px;
-      }
-
-      .project-card {
-        flex-direction: column;
-        /* 垂直排列 */
-        min-height: auto;
-        /* 自动高度 */
-      }
-
-      .project-text {
-        padding-right: 0;
-        padding-bottom: 20px;
-        /* 与图片保持间距 */
-      }
-
-      .project-image {
-        flex: 0 0 auto;
-        width: 100%;
-        order: 2;
-        /* 图片在文字下方 */
-      }
-
-      .project-img {
-        max-width: 100%;
-        /* 在小屏幕上图片占满宽度 */
-      }
-
-      .project-card h3 {
-        font-size: 1.4rem;
-      }
-    }
-
-    /* 无图片时的卡片样式 */
-    .project-card.no-image .project-text {
-      padding-right: 0;
-      width: 100%;
-    }
-
-    /* 为图片区域添加装饰效果 */
-    .project-image {
-      position: relative;
-      overflow: hidden;
-    }
-
-    .project-image::after {
-      content: '';
-      position: absolute;
-      top: -10px;
-      left: -10px;
-      right: -10px;
-      bottom: -10px;
-      background: linear-gradient(45deg, transparent 30%, rgba(100, 150, 255, 0.1) 50%, transparent 70%);
-      z-index: 0;
-      opacity: 0;
-      transition: opacity 0.5s ease;
-    }
-
-    .project-image:hover::after {
-      opacity: 1;
-    }
-
-    .project-img {
-      position: relative;
-      z-index: 1;
-    }
-
-    /* Blog Posts */
-    .blog-posts {
-      margin-top: 40px;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .blog-post {
-      background-color: rgba(25, 30, 70, 0.6);
-      border-radius: 12px;
-      padding: 30px;
-      margin-bottom: 30px;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-      border-left: 5px solid #64ffda;
-    }
-
-    .blog-post h3 {
-      color: #64ffda;
-      margin-bottom: 15px;
-      text-align: center;
-    }
-
-    /* 圆形照片样式 */
-    .profile-photo.circular {
-      border-radius: 50%;
-      width: 280px;
-      height: 280px;
-      object-fit: cover;
-    }
-
-    /* Collection Container */
-    .collection-container {
-      background-color: rgba(25, 30, 70, 0.6);
-      border-radius: 12px;
-      padding: 35px;
-      margin-top: 40px;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-      text-align: center;
-    }
-
-    .doc-link {
-      display: inline-flex;
-      align-items: center;
-      background: linear-gradient(to right, #1a237e, #283593);
-      color: white;
-      text-decoration: none;
-      padding: 15px 30px;
-      border-radius: 8px;
-      font-weight: 600;
-      font-size: 1.1rem;
-      margin-top: 20px;
-      transition: all 0.3s ease;
-    }
-
-    .doc-link:hover {
-      transform: translateY(-3px);
-    }
-
-    /* Footer布局样式 */
-    .footer-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      flex-wrap: wrap;
-      gap: 40px;
-      margin-bottom: 30px;
-      padding-bottom: 30px;
-      border-bottom: 1px solid rgba(100, 150, 255, 0.2);
-    }
-
-    .footer-info {
-      flex: 1;
-      min-width: 300px;
-    }
-
-    .footer-contact {
-      flex: 1;
-      min-width: 300px;
-    }
-
-    .footer-contact h3 {
-      color: #64b5f6;
-      margin-bottom: 20px;
-      font-size: 1.4rem;
-      text-align: left;
-    }
-
-    .footer-tagline {
-      font-size: 1.1rem;
-      color: #bbdefb;
-      margin: 10px 0;
-      font-style: italic;
-    }
-
-    .footer-note {
-      font-size: 0.9rem;
-      color: #90caf9;
-      margin-top: 15px;
-    }
-
-    /* 联系信息样式 */
-    .contact-details {
-      margin-top: 15px;
-    }
-
-    .contact-item {
-      display: flex;
-      align-items: flex-start;
-      margin-bottom: 20px;
-      text-align: left;
-    }
-
-    .contact-item i {
-      background-color: #1a237e;
-      color: white;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-right: 15px;
-      font-size: 1.1rem;
-      flex-shrink: 0;
-    }
-
-    .contact-label {
-      font-weight: 600;
-      color: #bbdefb;
-      margin-bottom: 5px;
-    }
-
-    .contact-item p {
-      margin: 0;
-      line-height: 1.5;
-    }
-
-    /* 响应式设计 */
-    @media (max-width: 768px) {
-      .footer-content {
-        flex-direction: column;
-        gap: 30px;
-      }
-
-      .footer-contact h3 {
-        text-align: center;
-      }
-
-      .contact-item {
-        justify-content: center;
-        text-align: center;
-        flex-direction: column;
-      }
-
-      .contact-item i {
-        margin-right: 0;
-        margin-bottom: 10px;
-      }
-    }
-
-    /* 调整原有的footer样式 */
-    footer {
-      text-align: center;
-      color: #bbdefb;
-      padding: 30px 20px 20px;
-      margin-top: 40px;
-      background-color: rgba(15, 20, 50, 0.0);
-      border-radius: 10px;
-      border-top: 1px solid rgba(100, 150, 255, 0.0);
-    }
-
-    .social-links {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 25px;
-    }
-
-    .social-icon {
-      width: 45px;
-      height: 45px;
-      background-color: rgba(100, 150, 255, 0.1);
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #bbdefb;
-      font-size: 1.3rem;
-      transition: all 0.3s ease;
-    }
-
-    .footer-contact {
-      background-color: rgba(25, 30, 70, 0.4);
-      padding: 20px;
-      border-radius: 10px;
-      /*border-left: 3px solid #64b5f6;*/
-    }
-
-    /* Responsive Design */
-    @media (max-width: 1200px) {
-      .container {
-        max-width: 85%;
-      }
-    }
-
-    @media (max-width: 768px) {
-      .container {
-        max-width: 95%;
-        padding: 10px;
-      }
-
-      .tabs-header {
-        flex-direction: column;
-      }
-
-      .tab-btn {
-        min-width: 100%;
-        padding: 15px;
-      }
-
-      .tab-content {
-        padding: 25px;
-      }
-
-      h1 {
-        font-size: 2.2rem;
-      }
-
-      .info-card,
-      .project-card {
-        width: 100%;
-        max-width: 400px;
-      }
-    }
-  </style>
 </head>
 
 <body>
+  <div id="stars-container"></div>
   <div class="container">
     <header>
       <div class="avatar">
@@ -898,7 +216,7 @@
               present
               the observations</p>
             <a href="https://docs.qq.com/sheet/DTUptUVhqRXp3Zm52?tab=BB08J2" target="_blank" class="doc-link">
-              <i class="fas fa-external-link-alt"></i>Access Online Document
+              <i class="fas fa-external-link-alt"></i>Access
             </a>
           </div>
         </div>
