--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
         <!-- Blog Tab -->
         <div class="tab-content" id="blog">
-          <h2>Personal Blog</h2>
+          <h2>Blog</h2>
           <p class="blog-intro">Here I record research insights, my activities and moments. Blog content is updated
             regularly.</p>
 
