--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="tab-content active" id="home">
           <div class="home-content">
             <div class="home-text">
-              <h2>Welcome to My Astronomy Space</h2>
+              <h2>Welcome to My Space</h2>
               <p>
                 Hi! This is Zhixuan Li (李志炫), a Ph.D. candidate at Tsinghua University, specializing in Astronomy.
                 My current research focuses on exoplanets and planet formation.
@@ -218,6 +218,21 @@
             <a href="https://docs.qq.com/sheet/DTUptUVhqRXp3Zm52?tab=BB08J2" target="_blank" class="doc-link">
               <i class="fas fa-external-link-alt"></i>Access
             </a>
+          </div>
+
+          <div class="collection-container">
+            <h3>
+              An excellent Linux tutorial Written by my classmate @Xin Qiao
+            </h3>
+            <p>
+              A comprehensive Linux tutorial for beginners, covering installation, commands, and <strong>valuable
+                experiences</strong>. The author has his own personal website (https://xinq.pages.dev/)
+              , welcome to visit and explore more tools!
+            </p>
+            <a href="https://xinq.pages.dev/tools/" target="_blank" class="doc-link">
+              <i class="fas fa-external-link-alt"></i>Access
+            </a>
+
           </div>
         </div>
 
