change the header and resize the container

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   <div id="stars-container"></div>
   <div class="container">
     <header>
-      <div class="avatar">
-        <i class="fas fa-user-astronaut"></i>
-      </div>
+      <!-- <div class="avatar"> -->
+      <!--   <!-- <i class="fas fa-user-astronaut"></i> -->
+      <!--   <img src="images/JupiterSystem.png" alt="Zhixuan Li"> -->
+      <!-- </div> -->
       <!-- <h1>Welcome to my personal space!</h1> -->
+      <img src="images/JupiterSystem.png" alt="header" class="wide-header-image" />
       <h1>Stand for Your Standing</h1>
     </header>
 
@@ -49,7 +51,7 @@
         <div class="tab-content active" id="home">
           <div class="home-content">
             <div class="home-text">
-              <h2>Welcome to My Space</h2>
+              <h2>Welcome to My Universe</h2>
               <p>
                 Hi! This is Zhixuan Li (李志炫), a Ph.D. candidate at Tsinghua University, specializing in Astronomy.
                 My current research focuses on exoplanets and planet formation.
@@ -59,7 +61,6 @@
               </p>
             </div>
             <div class="home-photo">
-              <!-- 这里放置你的照片 -->
               <img src="./images/profile.jpg" alt="Zhixuan Li Photo" class="profile-photo circular" />
             </div>
           </div>
@@ -68,8 +69,6 @@
         <!-- Personal Information Tab -->
         <div class="tab-content" id="personal">
           <h2>Personal Information</h2>
-
-          <!-- 在选项卡内容中添加这个卡片 -->
 
           <div class="info-grid">
 
@@ -322,7 +321,6 @@
     <!--   </div> -->
     <!-- </footer> -->
   </div>
-  <!-- 博客加载器脚本 -->
   <script>
     // Tab switching functionality
     document.addEventListener("DOMContentLoaded", function () {
@@ -349,6 +347,7 @@
       });
     });
   </script>
+  <!-- the blog loadar -->
   <script src="./js/blog-loader.js"></script>
 </body>
 
