modify the collection

--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
 
           <div class="collection-container">
             <h3>
-              An excellent Linux tutorial Written by my classmate @Xin Qiao
+              An excellent Macos tutorial Written by my classmate @Xin Qiao
             </h3>
             <p>
-              A comprehensive Linux tutorial for beginners, covering installation, commands, and <strong>valuable
+              A comprehensive Macos tutorial for beginners, covering installation, commands, and <strong>valuable
                 experiences</strong>. The author has his own personal website (https://xinq.pages.dev/)
               , welcome to visit and explore more tools!
             </p>
