modify the visual effects

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <!-- </div> -->
       <!-- <h1>Welcome to my personal space!</h1> -->
       <img src="images/JupiterSystem.png" alt="header" class="wide-header-image" />
-      <h1>Stand for Your Standing</h1>
+      <h1>per aspera and astra</h1>
+      <h2> 循此苦旅，直抵群星 </h2>
     </header>
 
     <main>
